--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@types/puppeteer": "^3.0.1",
     "@types/puppeteer-core": "^2.0.0",
+    "multer": "^1.4.2",
     "puppeteer": "^4.0.1",
     "puppeteer-core": "^4.0.1",
     "reflect-metadata": "^0.1.13",
